heapsnapshot: speeding up TakeSnapshot
Set script line ends before getting position info to
prevent fallback to GetPositionInfoSlow.

--- a/AUTHORS
+++ b/AUTHORS
@@ -204,3 +204,4 @@ Zhao Jiazhong <kyslie3100@gmail.com>
 Zhongping Wang <kewpie.w.zp@gmail.com>
 柳荣一 <admin@web-tinker.com>
 Yanbo Li <lybvinci@gmail.com>
+hyj1991 <yeekwanvong@gmail.com>
