--- a/AUTHORS
+++ b/AUTHORS
@@ -219,3 +219,5 @@ Zeynep Cankara <zeynepcankara402@gmail.com>
 Zhao Jiazhong <kyslie3100@gmail.com>
 Zhongping Wang <kewpie.w.zp@gmail.com>
 柳荣一 <admin@web-tinker.com>
+Yanbo Li <lybvinci@gmail.com>
+hyj1991 <yeekwanvong@gmail.com>
