[Intl] fix awkward rounding behavior
Change Intl::SetNumberFormatDigitOptions to fix the awkward rounding
behavior in NumberFormat when formatting a currency with
"maximumFractionDigits" set to a value less than 2.

Bug: v8:10844

Refs: https://github.com/tc39/ecma402/pull/471
Change-Id: Iba9dec3915433f9c1dc198776be4c346c7afad05

--- a/AUTHORS
+++ b/AUTHORS
@@ -198,7 +198,7 @@ Teddy Katz <teddy.katz@gmail.com>
 Tiancheng "Timothy" Gu <timothygu99@gmail.com>
 Tobias Burnus <burnus@net-b.de>
 Tobias Nießen <tniessen@tnie.de>
-Ujjwal Sharma <usharma1998@gmail.com>
+Ujjwal Sharma <ryzokuken@disroot.org>
 Vadim Gorbachev <bmsdave@gmail.com>
 Varun Varada <varuncvarada@gmail.com>
 Victor Costan <costan@gmail.com>
